# mdminify

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yaml  pre-commit.yaml  release.yml  test.yaml  tests.yaml
changelog/: index.html
cli/: index.html
mdminify/: index.html
search/: search_index.json
src/mdminify/: __about__.py  cli.py  mdminify.py
tests/: test_cli.py  test_mdminify.py
