[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdminify"
dynamic = ["version"]
description = "Minifying and restoring markdown files by stripping unnecessary elements and reformatting content"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Aleksandr Kadykov", email = "dev@kadykov.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "tox",
]
dev = [
  "mdminify[test]",
  "pre-commit",
]

[project.urls]
Documentation = "https://github.com/Aleksandr Kadykov/mdminify#readme"
Issues = "https://github.com/Aleksandr Kadykov/mdminify/issues"
Source = "https://github.com/Aleksandr Kadykov/mdminify"

[tool.hatch.version]
path = "src/mdminify/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mdminify tests}"

[tool.coverage.run]
source_pkgs = ["mdminify", "tests"]
branch = true
parallel = true
omit = [
  "src/mdminify/__about__.py",
]

[tool.coverage.paths]
mdminify = ["src/mdminify", "*/mdminify/src/mdminify"]
tests = ["tests", "*/mdminify/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312, mypy

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312, mypy

[testenv]
allowlist_externals = pytest
extras =
    test
passenv = *
setenv =
    PYTHONPATH = {toxinidir}
    PYTHONWARNINGS = ignore
commands =
    pytest --cov=mdminify --cov-branch --cov-report=xml --cov-report=term-missing tests
"""
